osd: fix to recover adjacent clone when set_chunk is called

set_chunk needs adjacent clones to calculate reference count

fixes: https://tracker.ceph.com/issues/51627

Signed-off-by: Myoungwon Oh <myoungwon.oh@samsung.com>
(cherry picked from commit 7b669e4af42d63d2ca29e78de6cc6ffb5428e30a)